Add deployment configurations and webhook support
- Add vercel.json for frontend deployment
- Add railway.json for backend deployment
- Add health check endpoint
- Update API URLs for production
- Add Stripe webhook endpoint
- Create deployment documentation

--- a/env.example
+++ b/env.example
@@ -15,5 +15,14 @@ AWS_ACCESS_KEY_ID=your_aws_access_key_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 AWS_REGION=us-east-1
 
+# OpenAI Configuration (for contract clause extraction)
+REACT_APP_OPENAI_API_KEY=your_openai_api_key_here
+
+# Mailgun Configuration (for email sending)
+MAILGUN_API_KEY=your_mailgun_api_key_here
+MAILGUN_DOMAIN=your_mailgun_domain_here
+MAILGUN_FROM_EMAIL=noreply@your_mailgun_domain_here
+MAILGUN_BASE_URL=https://api.mailgun.net/v3
+
 # Server Configuration
 PORT=3000
